deleted company logo

--- a/TrumpCardRoulette.html
+++ b/TrumpCardRoulette.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://use.typekit.net/uxa8oxa.css" />
-    <title>TRUMP CARD ROULETTE</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap"
+      rel="stylesheet"
+    />
+    <title>ルーレット</title>
     <style>
       body {
-        font-family: "ysans-std", sans-serif;
+        font-family: ysans-std, sans-serif;
         font-weight: 800;
         font-style: normal;
         text-align: center;
@@ -31,13 +36,13 @@
         border: solid;
         border-width: 5px;
         border-radius: 15px;
-        font-family: "ysans-std", sans-serif;
+        font-family: ysans-std, sans-serif;
         color: #272a6d;
       }
       main {
-        width: 50%;
-        margin: 10px auto;
-        /* padding: 10px; */
+        width: 44%;
+        margin: auto;
+        padding: 10px 25%;
         display: flex;
         justify-content: space-between;
       }
@@ -129,10 +134,7 @@
   </head>
   <body>
     <div class="borderYellow">
-      <p href="">
-        <img src="careermaker_logo.png" alt="CareerMaker" id="logo" />
-      </p>
-      <h1 style="font-size: 2.5em; margin: 0%">TRUMP CARD ROULETTE</h1>
+      <h1 style="font-size: 2.5em; margin: 0%">くじ引きルーレット</h1>
       <main>
         <section>
           <p id="slot1"></p>
@@ -150,10 +152,6 @@
             <br />
             <button id="stop3">STOP</button>
           </section>
-          <p>
-            <img src="Mr. Miss.Career_transparent.png" alt="character"
-            id="character"
-          </p>
         </div>
       </main>
       <button id="start">START</button>
@@ -307,5 +305,3 @@
     </script>
   </body>
 </html>
-
-<!-- 製作者:矢野佳夏子 -->
